<resources>
    <string name="app_name">GymStat</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="register_and_back_to_login">Register and back to login</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="e_mail">e-mail</string>
    <string name="date_of_birth">date of birth</string>
    <string name="password">password</string>
    <string name="age">age</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_bottom_navigation_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_profile">My profile</string>
    <string name="food">Food</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="add">add</string>
</resources>